# RemoteDeskHarmonyOS

./: .clangd  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  REUSE.toml  SECURITY.md  THIRD_PARTY_NOTICES.md  build-profile.example.json5  build-profile.json5  local.properties.example
.githooks/: pre-push
AppScope/: app.json5
docs/: ACCOUNT_KIT_SETUP.md  AGC_CLOUD_SPACE_SETUP.md  BUILD_BASELINE.md  CLOUD_SYNC_TEST_CHECKLIST.md  CROSS_DEVICE_GITHUB_WORKFLOW.md  DEVICE_VERIFICATION_CHECKLIST.md  MODERN_RESOURCE_ADD_FLOW_REFACTOR_PLAN.md  MULTI_DEVICE_RESEARCH.md  RDP_AUTH_MODES_UPGRADE_PLAN.md  RDP_MODULE_REPAIR_UPGRADE_PLAN.md  RDP_RUSTDESK_BACKGROUND_CONTINUITY_TESTS.md  RDP_RUSTDESK_UPGRADE_PLAN.md  RDP_STATUS.md  REMOTE_CURSOR_CONTROLS_RESTORE_PLAN.md  REMOTE_CURSOR_STUTTER_REPAIR_PLAN.md  REMOTE_RESOLUTION_SCALE_PLAN.md  RESOURCE_ADD_FAB_UI_UPGRADE_PLAN.md  RUSTDESK_DIAGNOSTICS_PRO_PLAN.md  RUSTDESK_KEY_AND_APPROVAL_UPGRADE_PLAN.md  SSH_KEY_IMPORT_FIX_PLAN.md  SSH_TERMINAL_CLAUDECODE_HANDOFF.md  SSH_TERMINAL_TEST_CASES.md  SSH_TERMINAL_WORK_LOG.md  TECH_SPEC.md  VNC_UPGRADE_DESIGN.md  feedback-community-qr.md
entry/: build-profile.json5  build-profile.json5.bak-freerdp  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
entry/src/main/cpp/: CMakeLists.txt  napi_helpers.h  napi_init.cpp
entry/src/main/cpp/audio/: audio_activity_state.cpp  audio_activity_state.h  audio_capturer.cpp  audio_capturer.h  audio_player.cpp  audio_player.h  audio_queue_policy.cpp  audio_queue_policy.h  clipboard_bridge.cpp  clipboard_bridge.h  input_handler.cpp  input_handler.h
entry/src/main/cpp/common/: log_config.h  safe_log.cpp  safe_log.h
entry/src/main/cpp/extensions/: auth_provider.h  data_provider.h  extension_loader_napi.cpp  extension_registry.h  protocol_adapter.h  session_teardown_executor.cpp  session_teardown_executor.h  transfer_runtime_status.h
entry/src/main/cpp/input/: remote_cursor_snapshot.cpp  remote_cursor_snapshot.h
entry/src/main/cpp/rdp/: freerdp_adapter.cpp  freerdp_adapter.h  rdp_audio_policy.cpp  rdp_audio_policy.h  rdp_auth_identity_policy.cpp  rdp_auth_identity_policy.h  rdp_auth_mode_policy.cpp  rdp_auth_mode_policy.h  rdp_background_frame_cache.cpp  rdp_background_frame_cache.h  rdp_certificate_policy.h  rdp_damage_accumulator.cpp  rdp_damage_accumulator.h  rdp_file_clipboard_bridge.cpp  rdp_file_clipboard_bridge.h  rdp_file_clipboard_offer.cpp  rdp_file_clipboard_offer.h  rdp_frame_pump.cpp  rdp_frame_pump.h  rdp_frame_scheduler.cpp  rdp_frame_scheduler.h  rdp_gl_upload_gate.cpp  rdp_gl_upload_gate.h  rdp_graphics_lifecycle.cpp  rdp_graphics_lifecycle.h  rdp_h264_capability_gate.h  rdp_input_queue.h  rdp_keymap.h  rdp_performance_policy.h  rdp_presentation_metrics.h  rdp_render_policy.h  rdp_shutdown_state.h
entry/src/main/cpp/render/: decoder_callback_gate.h  decoder_lifecycle_gate.h  decoder_pipeline_lifecycle_policy.h  decoder_recovery_policy.h  frame_callback_gate.h  gl_renderer.cpp  gl_renderer.h  gl_surface_lifecycle_policy.h  hw_decoder.cpp  hw_decoder.h  native_image_context_policy.h  perf_stats.h  software_decode_latency_policy.h  software_decoder.cpp  software_decoder.h  video_backpressure_controller.cpp  video_backpressure_controller.h  video_perf_counters.cpp  video_perf_counters.h
entry/src/main/cpp/rustdesk/: rustdesk_bridge.cpp  rustdesk_bridge.h  rustdesk_ipc.h
entry/src/main/cpp/security/: crypto_utils.cpp  crypto_utils.h  host_locker.cpp  host_locker.h  security_napi.cpp
entry/src/main/cpp/ssh/: ssh_adapter.cpp  ssh_adapter.h  ssh_algorithm_prefs.h  ssh_key_tool.cpp  ssh_key_tool.h
entry/src/main/cpp/terminal/: terminal_core_napi.cpp  terminal_core_napi.h
entry/src/main/cpp/test/: audio_activity_state_test.cpp  audio_queue_policy_test.cpp  decoder_callback_gate_test.cpp  decoder_lifecycle_gate_test.cpp  decoder_pipeline_lifecycle_policy_test.cpp  decoder_recovery_policy_test.cpp  gl_surface_lifecycle_policy_test.cpp  native_image_context_policy_test.cpp  perf_test.cpp  rdp_audio_policy_test.cpp  rdp_auth_identity_policy_test.cpp  rdp_auth_mode_policy_test.cpp  rdp_background_frame_cache_test.cpp  rdp_certificate_policy_test.cpp  rdp_damage_accumulator_test.cpp  rdp_file_clipboard_offer_test.cpp  rdp_frame_pump_contract_test.cpp  rdp_frame_scheduler_test.cpp  rdp_gl_upload_gate_test.cpp  rdp_graphics_lifecycle_test.cpp  rdp_h264_capability_gate_test.cpp  rdp_input_queue_test.cpp  rdp_performance_policy_test.cpp  rdp_presentation_metrics_test.cpp  rdp_render_policy_test.cpp  rdp_shutdown_state_test.cpp  remote_cursor_snapshot_test.cpp  safe_log_test.cpp  session_teardown_executor_test.cpp  software_decode_latency_policy_test.cpp  software_decoder_callback_gate_test.cpp  test_main.cpp  test_runner.h  transfer_runtime_status_test.cpp  video_activity_state_test.cpp  video_backpressure_test.cpp  video_perf_counters_test.cpp
entry/src/main/cpp/types/librdpnapi/: index.d.ts  oh-package.json5
entry/src/main/cpp/video/: video_activity_state.cpp  video_activity_state.h
entry/src/main/cpp/vnc/: vnc_adapter.cpp  vnc_adapter.h
entry/src/test/cpp/: CMakeLists.txt  extension_registry_test.cpp  host_locker_test.cpp
freerdp/: toolchain_ohos.cmake
rustdesk_ffi/: Cargo.toml  build.rs
rustdesk_ffi/.cargo/: config.toml
rustdesk_ffi/src/: connector.rs  control_inbox.rs  crypto.rs  crypto_channel.rs  cursor_state.rs  lib.rs  net.rs  opus_ffi.rs
rustdesk_ffi/src/protocol/: mod.rs  rendezvous.rs  session.rs  wire.rs
rustdesk_ffi/src/terminal_core/: cell.rs  ffi.rs  grid.rs  mod.rs  parser.rs  snapshot.rs  terminal.rs  tests.rs
rustdesk_helper/: Cargo.toml  README.md
rustdesk_helper/.cargo/: config.toml
rustdesk_helper/src/: ipc.rs  lib.rs
scripts/: build_ffmpeg_softdec_ohos.sh  build_freerdp_ohos.sh  build_opus_ohos.sh  build_rustdesk_ffi_ohos.sh  check_native_deps.ps1  create_migration_bundle.ps1  create_open_source_baseline.ps1  dev_workflow.ps1  generate_sbom.ps1  generate_third_party_artifacts.ps1  history_tool.ps1  install_git_hooks.ps1  macos_env.sh  resolve_ohos_sdk.sh  (+4 more)
(+470 files in other folders)
